--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<h1>Python GUI Application for Stepwise Processies Tkinter</h1>
+        <p>A cross platform GUI application for running stepwise processies written in Python.</p>
         <img src="./docs/screen-capture.png"></img>
 		<!-- <script src="./script.js"></script> -->
 	</body>
