--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1>Python GUI Application for Stepwise Processies Tkinter</h1>
         <p>A cross platform GUI application for running stepwise processies written in Python.</p>
-        <img src="./docs/screen-capture.png" style="width:80%;"></img>
+        <img src="./docs/screen-capture.png" style="width:80%;max-width:700px;"></img>
 		<!-- <script src="./script.js"></script> -->
 	</body>
 </html>
