--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<h1>Python GUI Application for Stepwise Processies Tkinter</h1>
         <p>A cross platform GUI application for running stepwise processies written in Python.</p>
+	<p><a href="https://github.com/chrisJohn404/python-gui-application-for-stepwise-processies-tkinter">Source Code</a></p>
         <img src="./docs/screen-capture.png" style="width:80%;max-width:700px;"></img>
 		<!-- <script src="./script.js"></script> -->
 	</body>
