--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Python GUI Application for Stepwise Processies Tkinter</title>
-		<meta name="description" content="A cross platform GUI application for running stepwise processies written in Python.">
-		<meta name="keywords" content="A cross platform GUI application for running stepwise processies written in Python.">
+		<title>Python GUI Application for Stepwise Processes Tkinter</title>
+		<meta name="description" content="A cross platform GUI application for running stepwise processes written in Python.">
+		<meta name="keywords" content="A cross platform GUI application for running stepwise processes written in Python.">
 		<!-- <link rel="stylesheet" href="./style.css"/> -->
 		<style></style>
 	</head>
 	<body>
-		<h1>Python GUI Application for Stepwise Processies Tkinter</h1>
-        <p>A cross platform GUI application for running stepwise processies written in Python.</p>
-	<p><a href="https://github.com/chrisJohn404/python-gui-application-for-stepwise-processies-tkinter">Source Code</a></p>
+		<h1>Python GUI Application for Stepwise Processes Tkinter</h1>
+        <p>A cross platform GUI application for running stepwise processes written in Python.</p>
+	<p><a href="https://github.com/chrisJohn404/python-gui-application-for-stepwise-processes-tkinter">Source Code</a></p>
         <img src="./docs/screen-capture.png" style="width:80%;max-width:700px;"></img>
 		<!-- <script src="./script.js"></script> -->
 	</body>
